2003-04-16  Naofumi Yasufuku  <naofumi@users.sourceforge.net>

	Now use new versions of GNU autotools.
	
	  - autoconf 2.54 or above
	  - automake 1.7 or above
	  - libtool 1.5 or above
	
	* autogen.sh: Use libtool-1.5 and automake-1.7.
	* configure.in: Use autoconf 2.54 or above.
	* Makefile.am: Use automake-1.7.

2003-04-14  Naofumi Yasufuku  <naofumi@users.sourceforge.net>

	* README.win32: Added.
	
	* Makefile.am (EXTRA_DIST): Added README.win32.

	* gtk/gdkgl/gdkglext.override: Include <windows.h> on Win32 to
	build using MSVC.

	* dsextras.py (BuildExt.init_extra_compile_args) 
	(BuildExt.build_extensions, BuildExt.build_extension): Now MSVC
	compatible struct GCC option is automatically added by BuildExt.

	* setup.py.in: extra_compile_args parameter is no longer needed.

2003-04-13  Alif Wahid	<awah005@users.sourceforge.net>

	* setup.py.in
	* setup.py: Extra predicate added to ensure that MSVC compatible
	flags are only used when actually using the GCC compiler.

2003-04-13  Naofumi Yasufuku  <naofumi@users.sourceforge.net>

	* setup.py.in: Changed 'gcc --version' to 'gcc -dumpversion'.

	* examples/low-level.py: Don't import gtk.gtkgl module.

	* gtk/gdkgl/gdkglmodule.c (init_gdkgl): Initialize GdkGLExt
	library. Added version information.

2003-04-13  Alif Wahid	<awah005@users.sourceforge.net>

	Win32 build fix to take account of GCC version to
	provide proper MSVC compatible struct packing.

	* setup.py.in
	* setup.py

2003-04-12  Naofumi Yasufuku  <naofumi@users.sourceforge.net>

	* dsextras.py:
	* setup.py.in: Win32 build fix.

2003-04-04  Alif Wahid	<awah005@users.sourceforge.net>

	Fixed bug in the font.py example program, however
	it won't be apparent yet. This is because we're waiting
	for PyGtk to conform to the default parameter conventions
	in the Pango API. Once PyGtk has, then some part of
	the code will be activated manually. So for now it's
	fixed in the background only.

2003-03-30  Alif Wahid	<awah005@users.sourceforge.net>
